syntax = "proto3";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.example.woopchat.proto_model";


message WoopMessage {
  bytes id = 1;
  google.protobuf.Timestamp created_at = 2;

  repeated MessageWrapper wrapper = 3;
}

message MessageWrapper {
    oneof message {
      Entity entity_create = 3;
      Filters filters = 4;
    }
}

message Filters {
  repeated string filter = 1;
}

message Entity {
  bytes id = 1;
  repeated Tag tags = 2;
  google.protobuf.Struct data = 3;
}

message Tag {
  bytes id = 1;
  optional google.protobuf.Struct data = 2;
}